# emergency-flight-finder

./: .gitignore  BUILD_STATUS.md  Dockerfile  README.md  REQUIREMENTS.md  pyproject.toml  render.yaml  requirements.txt  supabase_flight_alert_subscriptions.sql  supabase_schema.sql  vercel.json
api/: index.py
emergency_flights/: __init__.py  airspace.py  alerts.py  cli.py  community.py  config.py  crowdsource.py  display.py  intel.py  models.py  predictions.py  pricing.py  routes.py  searcher.py  supabase_store.py  web.py
public/: index.html  sw.js
scenarios/: bahrain_to_china.yaml  saudi_to_china.yaml
scripts/: cron_ping.py
static/: index.html  sw.js
