[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emergency-flight-finder"
version = "0.1.0"
description = "Find the fastest way out of a conflict zone by air"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "FlightRadarAPI>=1.3",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.8",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "supabase>=2.0",
]

[project.scripts]
evac = "emergency_flights.cli:main"

[tool.setuptools.packages.find]
include = ["emergency_flights*"]
